update landing page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -54,7 +54,7 @@
                 <!-- Navigation Links -->
                 <div class="hidden md:flex space-x-4">
                     <a href="#features" class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 hover:text-green-600 transition duration-200">
-                        Features
+                        Featuresrew
                     </a>
                     <a href="#about" class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 hover:text-green-600 transition duration-200">
                         About
